# ClipBridge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: ci.yml
apps/android/: App.tsx  app.json  gradle.properties  local.properties  package-lock.json  package.json  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/clipbridge/: ClipBridgeApplication.kt  MainActivity.kt
apps/android/app/src/main/java/com/clipbridge/data/: ClipboardManagerHelper.kt  CryptoManager.kt  Database.kt  DiscoveryManager.kt
apps/android/app/src/main/java/com/clipbridge/di/: AppModule.kt
apps/android/app/src/main/java/com/clipbridge/service/: ClipboardSyncService.kt
apps/android/app/src/main/res/values/: themes.xml
apps/android/gradle/: libs.versions.toml
apps/android/src/: crypto.ts  polyfills.ts  storage.ts
apps/desktop/: index.html  package-lock.json  package.json  verify_tests.cjs  verify_tests.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: clipboard.rs  crypto.rs  discovery.rs  main.rs  network.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  PROTOCOL.md  RELEASE_NOTES_v1.0.0.md  api.md  architecture.md  sequence_diagrams.md  setup.md
(+8 files in other folders)
